[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/GameOver.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/logo/logo_game_over.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/PressStart2P.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sounds/throw_bag.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]

size = 8
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]

resource_name = "enter"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("TextureRect:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -240, -0.25, 0, 0.25, 0, -0.181641, -0.11, -116.461, 0.16, -178.669, 0.0761299, -0.05, -40.3702, 0.17, -76.9676, -0.0370407, -0.27, -56.713, 0.08, -19.0972, 0, -0.15, -24.3426, 0.25, 0 ),
"times": PoolRealArray( 0, 0.65, 1.14, 1.69, 2 )
}

[sub_resource type="Animation" id=3]

resource_name = "press_start"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]

resource_name = "press_start_fast"
length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 400.0
margin_bottom = 240.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_bottom = -18.0
custom_fonts/font = SubResource( 1 )
text = "PRESS START BUTTON"
align = 1

[node name="LabelScore" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -224.0
margin_bottom = -210.0
custom_fonts/font = SubResource( 1 )
text = "PRESS START BUTTON"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "enter"
anims/enter = SubResource( 2 )
anims/press_start = SubResource( 3 )
anims/press_start_fast = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.342

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
